# henxel

./: CHANGELOG  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
dev/: INFO  aa.py  err.py  events.py  find_interesting_fonts.py  henxel_debug.bat  henxel_debug.sh  launch_test.py  launch_test.sh  launch_test_err_msg.sh  restart_editor.scpt  scroll_test.py  todo.py  todo.txt  token_stats.py  undo_no_separators.py  undo_separators.py  undo_test.py  undotext.py  ungridtest.py
dev/idle/: LICENCE  README  aa.py  autocomplete.py  autocomplete_w.py  autoexpand.py  calltip.py  calltip_w.py  codecontext.py  colorizer.py  editor.py  filelist.py  grep.py  history.py  hyperparser.py  parenmatch.py  parsepy.py  pathbrowser.py  pyparse.py  pyshell.py  rpc.py  tooltip.py  tree.py  undo.py
dev/keylog/: keypressproto.py  keytracker.py  track_one_key.py
dev/stash_start/: info_stash_start.txt  launch_test.sh  launch_test_err_msg.sh  restart_editor.scpt
dev/undo/: undo_no_separators.py  undo_separators.py  undotext.py
src/henxel/: __init__.py  __main__.py  binder.py  changefont.py  decorators.py  fdialog.py  help.txt  help_mac.txt  parsepy.py  print_utils.py  printer.py  settings.py  shortcuts.txt  shortcuts_mac.txt  wordexpand.py
src/importflags/: __init__.py
util/: mkvenv  requirements.txt  win_install_mkvenv.py
