[build-system]
requires = ["setuptools>=79"]
build-backend = "setuptools.build_meta"

[project]
name = "henxel"
version = "0.3.4"
requires-python = ">=3.9"
authors = [{name = "SamuelKos", email = "koskinens371@gmail.com"}]
license = "GPL-3.0-or-later"
description = "GUI-editor for Python development."
readme = "README.md"
keywords = ["henxel", "editor", "editors", "tkinter", "GUI"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS",
	"Intended Audience :: Developers",
	"Topic :: Software Development",
	"Topic :: Text Editors"
]

[project.scripts]
henxel = "henxel:main"

[project.urls]
Homepage = "https://github.com/SamuelKos/henxel"
Changelog = "https://github.com/SamuelKos/henxel/blob/main/CHANGELOG"






